objects/Released_Mask_Write_Distribution_List__c.object
<CustomObject>
    <fields>
        <fullName>Distribution_List__c</fullName>
        <label>Distribution List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Maskshop__c</fullName>
        <label>Maskshop</label>
        <referenceTo>Maskshop_Configuration__c</referenceTo>
        <relationshipLabel>Released Mask Write Distribution Lists</relationshipLabel>
        <relationshipName>Released_Mask_Write_Distribution_Lists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDeleted</label>
        <type>Checkbox</type>
    </fields>
    <label>Released Mask Write Distribution List</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Maskshop__c</columns>
        <columns>Distribution_List__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>isDeleted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RMWDL-{0000}</displayFormat>
        <label>Released Mask Write Distribution List Na</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Released Mask Write Distribution Lists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>